# aisafe

./: .gitignore  LICENSE  README.md  credentials.example.toml  pyproject.toml
aisafe/: __init__.py  cli.py  crypto.py  paths.py  store.py
